[project]
name = "python-example"
version = "0.1.0"
description = "Shows how to send metrics with Python"
authors = [{ name = "Armin Ronacher", email = "armin@ronacher.eu" }]
dependencies = ["sentry-sdk>=1.38.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
